structuring the navigation menu

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -235,6 +235,7 @@ $smallButtonLight: 12px;
 $titleFont: "Source Sans Pro", "Lato";
 $bodyFont: "Roboto", "Roboto Slab";
 
-$fontDefault: "Roboto", "Source Sans Pro", "segoe UI", "Lato", sans-serif;
+$font-family-default: "Roboto", "Source Sans Pro", "segoe UI", "Lato",
+  sans-serif;
 
 $fontCodeDefault: "Cascadia Code Pl", sans-serif;
