--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@ body {
 
 body {
   margin: 0;
-  font-family: $fontDefault;
+  font-family: $font-family-default;
   font-size: 100%;
   font-style: normal;
 }
