--- a/src/styles/organisms/_searcher.scss
+++ b/src/styles/organisms/_searcher.scss
@@ -1,18 +1,18 @@
 #searcher {
   border: none;
-  background-color: #f8f8f8;
-  box-shadow: 0px 1px 2px rgba(112, 92, 92, 0.12);
+  background-color: #ffffff;
+  box-shadow: 0px 0px 2px rgba(112, 92, 92, 0.12);
   padding: 2px 5px;
   outline: none;
-  border-radius: 8px;
+  border-radius: 20px;
   margin: 0 10px;
   width: auto;
   min-width: 100px;
   max-width: 500px;
+  display: flex;
   align-items: center;
   align-content: center;
   justify-content: center;
-  display: flex;
   color: #444444;
   font-size: 1.5rem;
 
@@ -22,7 +22,7 @@
     width: 100%;
     height: 100%;
     font-size: 1rem;
-    padding: 3px 0;
+    padding: 5p;
     outline: none;
   }
 
@@ -38,6 +38,7 @@
       font-size: 1.4rem;
       color: #666666;
       padding-right: 5px;
+      margin: 5px;
     }
     :hover {
       color: #444444;
