--- a/src/styles/organisms/_nav.scss
+++ b/src/styles/organisms/_nav.scss
@@ -1,58 +1,43 @@
 #Navigation {
   display: flex;
-  align-content: center;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
-  min-height: 20px;
-  max-height: 100px;
-  background-color: #ffffff;
-  box-shadow: 2px 2px 5px #f1f1f1;
+  min-height: 12vh;
+  background-color: $tColor;
+  box-shadow: 0px 2px 6px #f1f1f1;
   position: sticky;
   top: 0;
-  nav {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    justify-content: left;
-    align-items: center;
-    align-content: center;
-    padding: 0;
-    margin: 0;
-  }
+  padding: 5px 40px;
+
   .navigation-searcher {
-    width: 25%;
-    min-width: 50px;
+    width: 40%;
+    min-width: 400px;
+    form {
+      height: 6vh;
+    }
   }
-}
 
-.nav-items {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    li {
+  .nav-items {
+    ul {
+      display: flex;
       justify-content: center;
       align-items: center;
-      list-style: none;
-      margin: 0 10px;
 
-      a:hover {
-        color: $pColor;
-      }
-
-      a {
+      li {
         justify-content: center;
-        align-items: center;
-        color: #333333;
-        text-decoration: none;
-        margin: 0;
-        font-size: 1rem;
+        list-style: none;
+        margin: 0 10px;
+
+        a:hover {
+          color: $pColor;
+        }
+
+        a {
+          justify-content: center;
+          color: #333333;
+          text-decoration: none;
+          font-size: 1rem;
+        }
       }
     }
   }
@@ -62,15 +47,16 @@
   a {
     text-decoration: none;
     text-transform: capitalize;
-    font-style: bold;
+    font-style: 700;
     color: $pColor;
+    display: flex;
+    div {
+      margin: 3px;
+    }
     :hover,
     :focus {
       color: $sCTwo;
-      transition-duration: 0.5s;
-    }
-    a {
-      padding: 3px;
+      transition: all 0.5s;
     }
   }
 }
