--- a/src/styles/organisms/_searcher.scss
+++ b/src/styles/organisms/_searcher.scss
@@ -1,11 +1,11 @@
 #searcher {
   border: none;
-  background-color: #f8f8f8;
+  background-color: $tCOne;
   box-shadow: 0px 1px 2px rgba(112, 92, 92, 0.12);
   padding: 2px 5px;
   outline: none;
-  border-radius: 8px;
-  margin: 0 10px;
+  border-radius: 20px;
+  margin: 5px;
   width: auto;
   min-width: 100px;
   max-width: 500px;
@@ -13,7 +13,6 @@
   align-content: center;
   justify-content: center;
   display: flex;
-  color: #444444;
   font-size: 1.5rem;
 
   #searcher-input {
@@ -22,22 +21,19 @@
     width: 100%;
     height: 100%;
     font-size: 1rem;
-    padding: 3px 0;
-    outline: none;
+    text-align: center;
   }
 
   a {
-    display: inline-block;
-    align-content: center;
+    display: flex;
+    justify-content: center;
     align-items: center;
     text-align: center;
-    justify-content: center;
     margin: 0;
     padding: 0;
     .search-icon {
       font-size: 1.4rem;
-      color: #666666;
-      padding-right: 5px;
+      color: $dCTwo;
     }
     :hover {
       color: #444444;
