create(component): SEO component creted

--- a/src/styles/organisms/_searcher.scss
+++ b/src/styles/organisms/_searcher.scss
@@ -18,13 +18,15 @@
   #searcher-input {
     background: none;
     border: none;
-    width: 100%;
+    width: 90%;
     height: 100%;
     font-size: 1rem;
     text-align: center;
   }
 
-  a {
+  .search-button {
+    border: none;
+    background: $tCOne;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,12 +34,12 @@
     margin: 0;
     padding: 0;
     .search-icon {
-      font-size: 1.4rem;
+      font-size: 2rem;
       color: $dCTwo;
     }
     :hover {
       color: #444444;
-      font-size: 1.5rem;
+      font-size: 2.1rem;
       transition-duration: 0.7s;
     }
   }
