--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -16,7 +16,7 @@ $dColor: #2c312d; //Name in Figma: Dark color 500
 // Color primary light
 $pCOne: #ecdafe; //Name in Figma: Primary Color 100
 $pCTwo: #c68ffc; //Name in Figma: Primary Color 200
-$pCThree: #b369fb; //Name in Figma: Primary Color 300
+$pCThree: #b369fb; //Name in Fig`ma: Primary Color 300
 $pCFour: #8e1ef9; //Name in Figma: Primary Color 400
 
 // color Primary dark
