--- a/src/styles/organisms/_searcher.scss
+++ b/src/styles/organisms/_searcher.scss
@@ -4,10 +4,10 @@
   box-shadow: 0px 1px 2px rgba(112, 92, 92, 0.12);
   padding: 2px 5px;
   outline: none;
-  border-radius: 20px;
+  border-radius: 12px;
   margin: 5px;
   width: auto;
-  min-width: 100px;
+  min-width: 50px;
   max-width: 500px;
   align-items: center;
   align-content: center;
@@ -21,7 +21,9 @@
     width: 90%;
     height: 100%;
     font-size: 1rem;
-    text-align: center;
+    text-align: left;
+    color: #333;
+    padding: 7px 0;
   }
 
   .search-button {
@@ -34,8 +36,9 @@
     margin: 0;
     padding: 0;
     .search-icon {
-      font-size: 2rem;
+      font-size: 1.8rem;
       color: $dCTwo;
+      padding: 5%;
     }
     :hover {
       color: #444444;
