--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,4 @@
-@import "./utils/_utils.scss";
-@import "./base/_base.scss";
-@import "./pages/_pages.scss";
-@import "./atoms/_atoms.scss";
-@import "./organisms/_organisms.scss";
+@import "./utils/utils";
+@import "./base/base";
+@import "./pages/pages";
+@import "./components/components";
