--- a/src/styles/organisms/_nav.scss
+++ b/src/styles/organisms/_nav.scss
@@ -5,7 +5,7 @@
   min-height: 20px;
   max-height: 50px;
   height: auto;
-  background-color: $tColor;
+  background-color: $tCTwo;
   box-shadow: 0px 2px 6px #f1f1f1;
   position: sticky;
   top: 0;
